@@ -5,7 +5,8 @@ The format is based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
 and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.html).
 
 ## [2.2.9-preview.3] - 2019-01-00
-### Bugfixes
+### Mostly Bugfixes
+- Added CinemachineCore.GetBlendOverride delegate to allow applications to override any vcam blend when it happens
 - FreeLook: if inherit position from similar FreeLooks, bypass damping 
 - Timeline: improve handling when vcam values are tweaked inside shot inspector (fogbugz 1109024)
 - OnTargetObjectWarped no longer generates garbage
